Cleanup
- improved documentation
- code cleanup

Signed-off-by: Mark Hoffmann <m.hoffmann@datainmotion.com>